--- a/Work.WebProj/App_GlobalResources/ResWeb.resx
+++ b/Work.WebProj/App_GlobalResources/ResWeb.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="WebTitle" xml:space="preserve">
-    <value>承信堆高機有限公司 | 承信堆高機企業社::堆高機,二手堆高機,中古堆高機,外匯堆高機,電動堆高機,柴油堆高機,汽油堆高機,自走式堆高機,瓦斯中古堆高機,立式電動堆高機,二手堆高機販售,堆高機維修,堆高機保養,實心胎,中長期出租堆高機,北部堆高機,桃園堆高機,桃園中古堆高機,桃園外匯堆高機</value>
+    <value>中古堆高機,堆高機專家-承信堆高機</value>
     <comment>網站標題</comment>
   </data>
   <data name="PublicUrl" xml:space="preserve">
@@ -130,9 +130,9 @@
     <comment>專案名稱</comment>
   </data>
   <data name="description" xml:space="preserve">
-    <value>承信堆高機專業經營日本外匯進口堆高機及各廠牌之柴油、汽油堆高機、電動堆高機等買賣及中長期租賃堆高機,中古堆高機,二手堆高機,電動堆高機,銷售日本外匯堆高機、二手堆高機，品牌多樣價格實在，服務專業品質精良歡迎前來洽詢</value>
+    <value>中古堆高機,堆高機專家-承信堆高機專業經營日本外匯進口中古堆高機,堆高機及各廠牌之柴油、汽油中古堆高機,堆高機、電動中古堆高機,堆高機等買賣及中長期租賃，更有專業的中古堆高機,堆高機服務團隊、品質精良的中古堆高機,堆高機產品，來滿足您物流硬體需求。</value>
   </data>
   <data name="keywords" xml:space="preserve">
-    <value>堆高機,二手堆高機,中古堆高機,外匯堆高機,電動堆高機,柴油堆高機,汽油堆高機,自走式堆高機,瓦斯中古堆高機,立式電動堆高機,二手堆高機販售,堆高機維修,堆高機保養,實心胎,中長期出租堆高機,北部堆高機,桃園堆高機,桃園中古堆高機,桃園外匯堆高機</value>
+    <value>中古堆高機,堆高機</value>
   </data>
 </root>
