--- a/Work.WebProj/App_GlobalResources/ResWeb.resx
+++ b/Work.WebProj/App_GlobalResources/ResWeb.resx
@@ -133,6 +133,6 @@
     <value>中古堆高機,堆高機專家-承信堆高機專業經營日本外匯進口中古堆高機,堆高機及各廠牌之柴油、汽油中古堆高機,堆高機、電動中古堆高機,堆高機等買賣及中長期租賃，更有專業的中古堆高機,堆高機服務團隊、品質精良的中古堆高機,堆高機產品，來滿足您物流硬體需求。</value>
   </data>
   <data name="keywords" xml:space="preserve">
-    <value>中古堆高機,堆高機</value>
+    <value>中古堆高機,堆高機,承信堆高機</value>
   </data>
 </root>
